<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="220dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgvAvatar"
        android:layout_width="180dp"
        android:layout_height="105dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/room"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        />

    <LinearLayout
        android:id="@+id/llIconsLeft"
        android:orientation="horizontal"
        android:layout_width="90dp"
        android:layout_height="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/imgvAvatar"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/txtType"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="8dp"
            android:text="@string/type"
            android:layout_marginRight="2dp"/>

        <TextView
            android:id="@+id/txtQuantityMember"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="8dp"
            android:text="@string/quantityMember"
            android:layout_marginRight="2dp"/>

        <TextView
            android:id="@+id/txtGender"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/male_26"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llIconsRight"
        android:orientation="horizontal"
        android:layout_width="45dp"
        android:layout_height="18dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/imgvAvatar"
        android:layout_alignParentRight="true">

        <TextView
            android:id="@+id/txtRateIcon"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/sad_50"
            android:layout_marginRight="6dp"/>

        <TextView
            android:id="@+id/txtCommentIcon"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/comment_32"/>

        <TextView
            android:id="@+id/txtQuantityComment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="8dp"
            android:layout_gravity="center_vertical"
            android:text="@string/quantityComment"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:text="@string/name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/llIconsLeft"/>

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="90dp"
        android:layout_height="15dp"
        android:textSize="11sp"
        android:text="@string/price"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/txtName"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="2dp"

    />

    <TextView
        android:id="@+id/txtArea"
        android:layout_width="90dp"
        android:layout_height="15dp"
        android:textSize="10sp"
        android:textFontWeight=""
        android:text="@string/area"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/txtName"
        android:layout_alignParentRight="true"
        android:gravity="end"

        />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="10sp"
        android:textFontWeight=""
        android:text="@string/address"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/txtPrice"
        android:layout_alignParentRight="true"
        />



</RelativeLayout>
